--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider.js"></script>
+    <script src="dash.js"></script>
     <script>
        $(function() 
          {
@@ -142,6 +143,7 @@
                         slideshowSpeed: 2400
                   });
        });
+        
     </script>
     </body>
 </html>
